# spliceJAC

./: .readthedocs.yaml  LICENSE  Pancreas.ipynb  README.md  Transitions.ipynb  figure_source_code.py  nx.html  pyproject.toml  remove_genes_pancreas.py  requirements.txt  setup.cfg  stability_pancreas.py  test_robustness_pancreas.py
.ipynb_checkpoints/: GRN Inference-checkpoint.ipynb  Pancreas-checkpoint.ipynb
datasets/Pancreas/: pancreas_PAGA.csv
docs/source/: conf.py  functions.md  index.md  index.rst  requirements.txt  usage.md
results/export_output/: grnDuctal.csv  transition_score.csv
source/: conf.py  index.rst
spliceJAC/: __init__.py  pl.py  tl.py
spliceJAC/plot/: __init__.py  gene_variation.py  grn_comparison.py  grn_plots.py  instability.py  jacobian_visual.py  plots.py  plotting_util.py  sankey_plots.py  sensitivity.py  signaling.py  umap_scatter.py
spliceJAC/tools/: __init__.py  analysis.py  aux_functions.py  estimate_jacobian.py  export_methods.py  grn_comparison.py  grn_statistics.py  inference.py  regr_method_sens.py  subsampling_sens.py  transitions.py
splicejac/: pl.py  tl.py
splicejac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
splicejac/plot/: __init__.py  gene_variation.py  grn_plots.py  jacobian_visual.py  plotting_util.py  sensitivity.py  signaling.py  umap_scatter.py
splicejac/tools/: estimate_jacobian.py  grn_comparison.py  grn_statistics.py  subsampling_sens.py
