[metadata]
name = splicejac
version = 0.0.1
author = Federico Bocci
author_email = fbocci@uci.edu
description = spliceJAC is a python-based toolkit to reconstruct cell state-specific gene regulatory networks (GRN) and predict transition driver genes leading to cell differentiation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/federicobocci/spliceJAC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True